Add download csv button (#4)
* feat: add download button

* chore: remove console.log

---------
